Edited linked list and remove magic method