@@ -2,25 +2,30 @@ package manager;
 
 import tasks.Task;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private List<Task> history = new ArrayList<>();
+    private static final int MAX_HISTORY_SIZE = 10;
+
+    private LinkedList<Task> history = new LinkedList<>();
 
     @Override
     public void add(Task task) {
         if (task == null) {
             return;
         }
+
         history.add(task);
-        if (history.size() > 10) {
-            history.remove(0);
+
+        if (history.size() > MAX_HISTORY_SIZE) {
+            history.removeFirst();
         }
     }
 
     @Override
     public List<Task> getHistory() {
-        return new ArrayList<>(history);
+        // Возвращаем копию истории
+        return new LinkedList<>(history);
     }
 }
